# AttDesigner

./: .gitignore  App.cpp  App.h  CMakeLists.txt  README.md  StorageAttenuatorParameters.cpp  StorageTable.cpp  StorageTable.h  TableStorage.cpp  TableStorage.h  UIDesigns.txt  UITable.cpp  UITable.h  main.cpp
Backend/: Attenuators.cpp  Attenuators.h  BPiAttenuator.cpp  BPiAttenuator.h  BTeeAttenuator.cpp  BTeeAttenuator.h  Calc.cpp  Calc.h  PiAttenuator.cpp  PiAttenuator.h  TeeAttenuator.cpp  TeeAttenuator.h
Matcher/: Match.cpp  Match.h
Storage/: AttenuatorParameters.cpp  AttenuatorParameters.h  Table.cpp  Table.h
UI/: AttenuatorParameters.cpp  AttenuatorParameters.h  Prompts.cpp  Prompts.h  Table.cpp  Table.h  TableFormatting.h  _Utils.cpp  _Utils.h
